build(gradle): Create debian package using jpackage